<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_background"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_logotipo" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/WhiteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/WhiteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            style="@style/DefaultButton"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/entrar" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/nao_tem_uma_conta"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/text_new_account"
            android:elevation="5dp"
            android:text="@string/cadastre_se"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>