<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TaskFormActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/relative_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/text_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:text="@string/adicionar_nova_tarefa"
            android:textAlignment="center"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/relative_toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fafafa"
                android:hint="@string/descricao" />

            <View
                android:id="@+id/view_description"
                style="@style/ViewElementsDivider"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_description" />

            <TextView
                android:id="@+id/text_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/prioridade"
                app:layout_constraintTop_toBottomOf="@+id/view_description" />

            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#c1c1c1"
                app:layout_constraintTop_toBottomOf="@+id/text_priority" />

            <View
                android:id="@+id/view_complete"
                style="@style/ViewElementsDivider"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_priority" />

            <CheckBox
                android:id="@+id/check_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/completa"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintTop_toBottomOf="@+id/view_complete" />

            <View
                android:id="@+id/view_date"
                style="@style/ViewElementsDivider"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/check_complete" />

            <Button
                android:id="@+id/button_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/clique_para_selecionar_a_data"
                app:layout_constraintTop_toBottomOf="@+id/view_date" />

            <View
                android:id="@+id/view_save"
                style="@style/ViewElementsDivider"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/button_date" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                style="@style/DefaultButton"
                android:text="@string/adicionar_tarefa"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_save" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>